// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders paused state in detailed condensed view 1`] = `
<div
  className="sub-component pause-button"
>
  <div
    className="button-group"
  >
    <div
      className="button button-left button-pause active smaller"
      onClick={[Function]}
    >
      <span />
    </div>
    <div
      className="button button-right button-caret"
      onClick={[Function]}
    >
      <span
        className="show-for-sr"
      >
        summary_show_menu
      </span>
    </div>
  </div>
  <div
    className="button-group dropdown-container"
    style={
      Object {
        "left": "0px",
      }
    }
  />
</div>
`;

exports[`renders paused state in detailed view 1`] = `
<div
  className="sub-component pause-button"
>
  <div
    className="button-group"
  >
    <div
      className="button button-left button-pause active smaller"
      onClick={[Function]}
    >
      <span>
        summary_resume_ghostery
      </span>
    </div>
    <div
      className="button button-right button-caret"
      onClick={[Function]}
    >
      <span
        className="show-for-sr"
      >
        summary_show_menu
      </span>
    </div>
  </div>
  <div
    className="button-group dropdown-container"
    style={
      Object {
        "left": "0px",
      }
    }
  />
</div>
`;

exports[`renders unpaused state in simple view 1`] = `
<div
  className="sub-component pause-button"
>
  <div
    className="button-group"
  >
    <div
      className="button button-left button-pause"
      onClick={[Function]}
    >
      <span>
        summary_pause_ghostery
      </span>
    </div>
    <div
      className="button button-right button-caret"
      onClick={[Function]}
    >
      <span
        className="show-for-sr"
      >
        summary_show_menu
      </span>
    </div>
  </div>
  <div
    className="button-group dropdown-container centered"
    style={
      Object {
        "left": "undefinedpx",
      }
    }
  />
</div>
`;
